As a user, I want to add tasks [Delivers #185402326]
